# TireNoHire

./: .gitignore  README.md  compose.dev.yaml
backend/: .dockerignore  Dockerfile.dev  Dockerfile.prod  analysis_result.json  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  jobs.py  matches.py  resumes.py
backend/app/core/: config.py  content_processor.py
backend/app/db/: __init__.py  models.py  mongodb.py
backend/app/engine/: __init__.py  jobs.py  resume.py  resume_match.py
backend/app/manager/: __init__.py  cache_manager.py  db.py
backend/app/models/: __init__.py  jobs.py  match.py  resume.py
backend/app/services/: content_processor.py  document_processor.py  job_description_extractor.py  language_model.py  match_analyzer.py
backend/app/services/analyzer/: models.py  prompts.py  seeker.py
backend/app/services/base_extractor/: base.py
backend/app/services/jobs/: __init__.py  job_description_extractor.py  models.py  prompt.py
backend/app/services/linkedin/: scrape.py
backend/app/services/resume/: __init__.py  extractor.py  models.py
backend/tests/: conftest.py  match_analyzer.py  test_api_jobs.py  test_api_matches.py  test_document_processor.py  test_end_to_end.py  test_language_model.py
backend/tests/test_data/: job_description_2.txt  mock_job_parsed.json  mock_match_analysis.json  mock_resume_parsed.json  resume_text_1.txt  resume_text_2.txt
client/: .dockerignore  Dockerfile.dev  Dockerfile.prod  index.html  package-lock.json  package.json  tsconfig.app.json
client/src/: App.tsx  index.css  main.tsx
(+49 files in other folders)
