[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Utkarsh Priyadarshi <utkarshpriyadarshi5026@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
langchain = "^0.3.24"
python-dotenv = "^1.1.0"
pypdf2 = "^3.0.1"
python-docx = "^1.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
