[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Utkarsh Priyadarshi <utkarshpriyadarshi5026@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
langchain = "^0.3.24"
python-dotenv = "^1.1.0"
pypdf2 = "^3.0.1"
python-docx = "^1.1.2"
pytest = "^8.3.5"
loguru = "^0.7.3"
uvicorn = "^0.34.2"
langchain-community = "^0.3.23"
langchain-openai = "^0.3.14"
python-multipart = "^0.0.20"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
